--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>Minha Landing Page</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<meta charset="description" content="Conteúdo do meu site.">
-	<meta charset="keywords" content="palavras,separadas,por,virgula">
-	<meta charset="author" content="Guilherme" />
+	<meta charset="keywords" content="segundo,projeto">
+	<meta charset="author" content="Guilherme Padovani Silveira" />
 	<meta charset="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
 </head>
 <body>
