--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Minha Landing Page</title>
+	
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<meta charset="description" content="Conteúdo do meu site.">
 	<meta charset="keywords" content="segundo,projeto">
 	<meta charset="author" content="Guilherme Padovani Silveira" />
 	<meta charset="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
+	<title>Multivac</title>
 </head>
 <body>
-
-<header>
-</header>
-
+	<header>
+		<section>
+			<div class="logo1"></div>
+			<div class="logo2"></div>
+			<div class="clear"></div>
+		</section>
+	</header>
 </body>
 </html>
