--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta charset="keywords" content="segundo,projeto">
 	<meta charset="author" content="Guilherme Padovani Silveira" />
 	<meta charset="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	<title>Multivac</title>
 </head>
 <body>
@@ -17,5 +19,23 @@
 			<div class="clear"></div>
 		</section>
 	</header>
+	<div class="bg">
+		<aside>
+			<h2>PODE ACREDITAR, POR DENTRO É AINDA MAIS BONITO.</h2>
+			<form action="">
+				<input type="text" name="nome" id="" placeholder="Nome">
+				<input type="email" name="email" id="" placeholder="E-mail">
+				<input type="fone" name="telefone" id="" placeholder="telefone">
+				<input type="submit" name="acao" value="Enviar">
+				<p>*Obrigatório</p>
+			</form>
+		</aside>
+	</div>
+	<main>
+		<section class="chamada">
+			<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nulla accusantium neque quis.</h2>
+		</section>
+	</main>
+
 </body>
 </html>
