--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
 	<header>
-		<section>
+		<div class="center">
 			<div class="logo1"></div>
 			<div class="logo2"></div>
 			<div class="clear"></div>
-		</section>
+		</div>
 	</header>
 	<div class="bg">
 		<aside>
@@ -32,9 +32,12 @@
 		</aside>
 	</div>
 	<main>
-		<section class="chamada">
-			<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nulla accusantium neque quis.</h2>
-		</section>
+		<div class="center">
+			<section class="chamada">
+				<h2>Viva a vida que você sempre sonhou</h2>
+				<p>Coberturas e apartamentos de frente para o mar no João Paulo</p>
+			</section>
+		</div>
 	</main>
 
 </body>
