--- a/index.html
+++ b/index.html
@@ -31,14 +31,57 @@
 			</form>
 		</aside>
 	</div>
+	<div></div>
 	<main>
+		
 		<div class="center">
+			<div class="seta"></div><!--SETA-->
 			<section class="chamada">
 				<h2>Viva a vida que você sempre sonhou</h2>
 				<p>Coberturas e apartamentos de frente para o mar no João Paulo</p>
 			</section>
 		</div>
-	</main>
+		<article>
+			<div class="center">
 
+				<div class="container1 flex">
+					<div class="bgmosaico1 bgflex"></div>
+					<div class="text">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
+					</div>
+				</div><!--CONTEINER1-->
+
+				<div class="container2 flex">
+					<div class="bgmosaico2 bgflex"></div>
+					<div class="text">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
+					</div>
+				</div><!--CONTEINER2-->
+
+				<div class="container3 flex">
+					<div class="bgmosaico3 bgflex"></div>
+					<div class="text">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
+					</div>
+				</div><!--CONTEINER3-->
+
+				<div class="container4 flex">
+					<div class="bgmosaico4 bgflex"></div>
+					<div class="text">
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
+					</div>
+				</div><!--CONTEINER4-->
+
+			</article><!--CONTEUDO PRINCIPAL-->
+		</div>	
+	</main>
+	<footer>
+		<div class="center">
+			<p>
+				TODOS OS DIREITOS RESERVADOS
+			</p>
+			<p>Contato: (19)97135-7855</p>
+		</div>
+	</footer>
 </body>
 </html>
