--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
 		<article>
 			<div class="center">
 
-				<div class="container1 flex">
+				<div class="flex">
 					<div class="bgmosaico1 bgflex"></div>
 					<div class="text">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
 					</div>
 				</div><!--CONTEINER1-->
 
-				<div class="container2 flex">
+				<div class="flex">
 					<div class="bgmosaico2 bgflex"></div>
 					<div class="text">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
 					</div>
 				</div><!--CONTEINER2-->
 
-				<div class="container3 flex">
+				<div class="flex">
 					<div class="bgmosaico3 bgflex"></div>
 					<div class="text">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
 					</div>
 				</div><!--CONTEINER3-->
 
-				<div class="container4 flex">
+				<div class="flex">
 					<div class="bgmosaico4 bgflex"></div>
 					<div class="text">
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi sed reiciendis voluptate ipsa ea debitis harum blanditiis fuga ab quo dolores quidem sapiente doloribus delectus, autem repellat atque rerum id!</p>
